--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="image__wraper">
                 <img src="/src/img/2.svg" alt="">
-              
+
             </div>
         </div>
     </section>
@@ -54,10 +54,77 @@
     <section id="sec__third">
         <div class="container_sm">
             <div class="part1">
-                
+
+                <h1>Usage</h1>
+                <p>
+                    Initialize EKS (AWS Kubernetes) and ECR (AWS container registry) on AWS
+                </p>
+
+            </div>
+            <div class="part2">
+                <div class="anno">
+                    <p>RUST</p>
+                </div>
+                <div class="code">
+                    <p></p>
+                </div>
+
+            </div>
+            <div class="left__button">
+                <a href="#"><i class="fab fa-github"></i> See more on Github</a>
+                <a href="#"><i class="fab fa-discord"></i> Join us on discord</a>
             </div>
         </div>
     </section>
+    <section id="sec__fourth">
+        <div class="container_sm">
+            <div class="keypoint">
+                <div class="k_1">
+                    <div class="k1">
+                        <img class="k1__img" src="src/img/k1.svg" alt="">
+                        <h2>Deploy real world applications</h2>
+                        <p>Qovery Engine empowers you to deploy complex applications, such as a backend, a frontend, and
+                            a database in a very simple way
+                            <span>Servers, networking, security, all is done by the Engine
+                            for you.</span></p>
+                        <a href="">See more</a>
+                    </div>
+                    <div class="k2">
+                        <img src="src/img/k2.svg" alt="">
+                        <h2>Resiliency is key</h2>
+                        <p>Qovery Engine knows when something goes wrong on the deployment of your applications. Qovery
+                            Engine is built with resiliency in mind        
+                            <span> A transactional engine inspired by what is provided
+                            into ACID databases has been developed at the heart of the product to rollback on a
+                            consistent and working application version when something goes wrong.</span></p>
+                        <a href="">See more</a>
+                    </div>
+                </div>
+                <div class="k_2">
+                    <div class="k3">
+                        <img src="src/img/k3.svg" alt="">
+                        <h2>On top of the best tools</h2>
+                        <p>Qovery Engine does not reinvent the wheel. It takes advantage of the best tools in the Cloud
+                            industry, such as Kubernetes, Terraform, and Helm to manage the deployment of the
+                            infrastructure and your applications.Servers, networking, security, all is done by the
+                            Engine for you.</p>
+                        <a href="">See more</a>
+                    </div>
+                    <div class="k4">
+                        <img src="src/img/k4.svg" alt="">
+                        <h2>Extensible</h2>
+                        <p>Qovery Engine is built to be highly extensible. Adding the support of a Cloud provider or a
+                            Continuous Integration platform is as simple as implementing a simple programmatic
+                            interface.</p>
+                        <a href="">See more</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+
+    </footer>
 
 
 
